Архитектурные правки