@@ -2,25 +2,24 @@ package indiana.indi.indiana.mapper.categories;
 
 import indiana.indi.indiana.dto.categories.CategoryDto;
 import indiana.indi.indiana.entity.categories.Category;
-import indiana.indi.indiana.entity.users.User;
-import indiana.indi.indiana.mapper.games.GameMapper;
+import indiana.indi.indiana.mapperInterface.games.GameMapperInterface;
+import indiana.indi.indiana.repository.games.GameRepository;
 import lombok.RequiredArgsConstructor;
 import org.springframework.stereotype.Component;
-
-import java.util.stream.Collectors;
 
 @Component
 @RequiredArgsConstructor
 public class CategoryMapper {
 
-    private final GameMapper gameMapper;
-    public CategoryDto toDto(Category category, User user) {
+    private final GameMapperInterface gameMapper;
+    private final GameRepository gameRepository;
+
+    public CategoryDto toDto(Category category, Long userId) {
         return new CategoryDto(
                 category.getId(),
                 category.getTitle(),
-                category.getGames().stream()
-                        .map(g -> gameMapper.toDto(g, user))
-                        .collect(Collectors.toList())
+                gameRepository.findAllByCategoryWithUserStatus(category.getId(), userId)
+                        .stream().map(gameMapper::toDto).toList()
         );
     }
 }
